Updated the code with the @RequestParam option

--- a/HelloWorldSpringBoot/src/main/resources/templates/Home.html
+++ b/HelloWorldSpringBoot/src/main/resources/templates/Home.html
@@ -10,12 +10,17 @@
 
 	<h3>Enter Name</h3>
 
-	<form action="/Welcome">
+	<form action="Welcome">
 		<label for="fname">First name:</label><br> 
-			<input type="text" id="fname" name="fname" value="John"><br> 
+			<input type="text" id="fname" name="fname" value="King"><br> 
 			<label for="lname">Last name:</label><br> 
-			<input type="text" id="lname" name="lname" value="Doe"><br>
+			<input type="text" id="lname" name="lname" value="Venky"><br>
 		<br> <input type="submit" value="Submit">
+	</form>
+
+     <form action="/add">
+		<input type="text" name="t1"><br> <input type="text"
+			name="t2"><br> <input type="submit">
 	</form>
 </body>
 </html>
