Added Functionality for @ModelAttribute and Mode in Method level

--- a/HelloWorldSpringBoot/src/main/resources/templates/Home.html
+++ b/HelloWorldSpringBoot/src/main/resources/templates/Home.html
@@ -18,9 +18,18 @@
 		<br> <input type="submit" value="Submit">
 	</form>
 
+<h1> Add the below two numbers</h1>
      <form action="/add">
 		<input type="text" name="t1"><br> <input type="text"
 			name="t2"><br> <input type="submit">
 	</form>
+	
+<h1> Sub the below two numbers</h1>
+     <form action="/sub"
+           method = "get">
+		<input type="text" name="Stringa" id = "Stringa"><br> 
+		<input type="text" name="Stringb" id = "Stringb"><br> 
+		<input type="submit">
+	</form>	
 </body>
 </html>
