--- a/HelloWorldSpringBoot/src/main/resources/templates/Home.html
+++ b/HelloWorldSpringBoot/src/main/resources/templates/Home.html
@@ -24,8 +24,8 @@
 			name="t2"><br> <input type="submit">
 	</form>
 	
-<h1> Sub the below two numbers</h1>
-     <form action="/sub"
+<h1> Concatenate two strings</h1>
+     <form action="/concatenate"
            method = "get">
 		<input type="text" name="Stringa" id = "Stringa"><br> 
 		<input type="text" name="Stringb" id = "Stringb"><br> 
