Send the object as a output to the View using @ModelAttribute.

--- a/HelloWorldSpringBoot/src/main/resources/templates/Home.html
+++ b/HelloWorldSpringBoot/src/main/resources/templates/Home.html
@@ -31,5 +31,13 @@
 		<input type="text" name="Stringb" id = "Stringb"><br> 
 		<input type="submit">
 	</form>	
+	
+<h1> Print the String values strings</h1>
+     <form action="/print">
+		<input type="text" name="sfirst_name" id = "sfirst_name"><br> 
+		<input type="text" name="slast_name" id = "slast_name"><br> 
+		<input type="submit">
+	</form>		
 </body>
+</html>
 </html>
